Fix elipsis not showing up

--- a/assets/upload.css
+++ b/assets/upload.css
@@ -4,4 +4,6 @@
 .custom-file-control {
 	white-space: nowrap;
 	text-overflow: ellipsis;
+	overflow: hidden;
+	padding-right: 5.4em;
 }
